--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "gsap": "^3.12.2",
-    "next": "13.5.6",
+    "link": "^2.1.0",
+    "next": "^14.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
