--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.5.2",
     "gsap": "^3.12.2",
     "link": "^2.1.0",
     "next": "^14.0.0",
